@@ -25,11 +25,14 @@ def url2pathname(url):
         error = 'Bad URL: ' + url
         raise IOError, error
     drive = comp[0][-1].upper()
-    components = comp[1].split('/')
     path = drive + ':'
-    for  comp in components:
+    components = comp[1].split('/')
+    for comp in components:
         if comp:
             path = path + '\\' + urllib.unquote(comp)
+    # Issue #11474: url like '/C|/' should convert into 'C:\\'
+    if path.endswith(':') and url.endswith('/'):
+        path += '\\'
     return path
 
 def pathname2url(p):
